<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <!-- <string name="app_name">ToDo</string> -->
    <string name="tab_1">Inbox</string>
    <string name="tab_2">Browse</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!--Project Editing-->
    <string name="add_project">Add Project</string>
    <string name="edit_project">Edit Name</string>
    <string name="delete_project">Delete Project?</string>


    <!-- Strings related to Settings -->

    <string name="pref_header_general">General</string>

    <string name="pref_title_filter_folder">Folder Mode</string>
    <string name="pref_key_filter_folder">folder_mode</string>
    <string name="pref_description_filter_folder">Filter: Show all tasks matching selected tags \nFolder: Don\'t show any under one of the linked tags
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_sort_mode">Default Sort Mode</string>
    <string-array name="pref_example_list_titles">
        <item>Date</item>
        <item>Alphabetical</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="pref_header_theme">Theme</string>


    <!--  Notifications -->
    <string name="notif_action_done">Done</string>
    <string name="notif_action_reschedule">Reschedule</string>
    <string name="notif_action_next_location">Next Time</string>


    <!--Inbox/Browse Fragment tests-->
    <string name="inboxtest">Inbox</string>
    <string name="browsetest">Browse</string>

    <!--Activity toolbar titles-->
    <string name="title_activity_add_list">Add Task</string>
    <string name="title_activity_tag_select">Select Tag</string>
    <string name="title_activity_create_tag">Add Tag</string>
    <string name="title_activity_task_view">TaskView</string><!--not needed, sets dynamically based on task title-->
    <string name="title_activity_search">Search</string>
    <string name="title_activity_archive">Archive</string>
    <string name="title_activity_reschedule">Reschedule</string>
    <string name="title_activity_onboarding">Onboarding</string>

    <!--Color picker text-->
    <string name="color_default_summary">Pick a Color</string>
    <string name="color_default_title">Theme Color</string>

    <string name="navSavedName">test_name</string>
    <string name="browse_tag_card_header_text">Tags</string>
    <string name="pref_colored_toolbar_title">Colored Toolbar</string>
    <string name="add_time_text">Add time</string>
    <string name="subfoler_create_text">Subfolder</string>
    <string name="subfolder_filter_check_title">Treat subfolders as filters</string>
    <string name="pref_sub_folder_filter_key">sub_Filter_pref</string>
    <string name="pref_notif_time_text">Time to notify for tasks with only a date</string>
    <string name="pref_notif_time_title">Notification Time</string>

    <string name="pref_header_folder">Folders</string>
    <string name="pref_header_notif">Notifications</string>
    <string name="no_remaining_tasks">No Tasks Left!</string>
    <string name="already_adding_task">Already Editing Task!</string>

    <string name="search_hint">Search tasks and tags</string>
    <string name="project_header_title">Project</string>
    <string name="import_export_menu">Import/Export</string>
    <string name="project_name_hint">Project Name</string>
    <string name="project_color_text">Project Color</string>

    <!--Dividers-->
    <string name="divider_overdue">OVERDUE</string>
    <string name="divider_today">TODAY</string>
    <string name="divider_week">THIS WEEK</string>
    <string name="divider_month">THIS MONTH</string>
    <string name="divider_future">FUTURE</string>

    <!--Onboarding-->
    <string name="onboarding_intro_screen_title">Hi</string>
    <string name="onboarding_intro_screen_description">Welcome to your new todo list. This tutorial will show you the basics of getting organized with ToDo. If you already know your way around, you can skip it.</string>
    <string name="onboarding_task_screen_title">Tasks</string>
    <string name="onboarding_task_screen_description">Tasks are the basic building block of your todo list. They can have lists and timed notifications in them too! Swipe them away to mark them done and move them to the archive.</string>
    <string name="onboarding_tag_screen_title">Tags</string>
    <string name="onboarding_tag_screen_description">Tags are the way to sort your tasks. You can apply them to tasks, but you can also make them children of other tags, to make for folder-like navigation. More on that later.</string>
    <string name="onboarding_folders_screen_title">Folders and Filters</string>
    <string name="onboarding_folders_screen_description">To get around the app, you can select the tags you want to see, and only look at those tasks. The Inbox view lets you see all the tasks containing the tags you\'ve picked. The Browse view lets you pick tags to filter down, and only shows exact matches.</string>
    <string name="onboarding_project_screen_title">Projects</string>
    <string name="onboarding_project_screen_description">Projects are the highest level of sorting in the app. Each has a separate set of tasks and tags. You could make one for simple reminders, and one for long-term projects, for example. \n \n That\'s it! Go add some tasks!</string>

    <string name="add_task_name_hint">Task Name</string>
    <string name="reminder_picker_title">Reminders</string>
    <string name="location_type_enter">Enter</string>
    <string name="location_type_near">Near</string>
    <string name="location_type_exit">Exit</string>
    <string name="location_map_not_loaded">No location selected, please wait or cancel the reminder</string>
    <string name="location_picker_radius">Radius</string>
    <string name="location_no_address">None</string>
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>


</resources>
