<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.andb.apps.todo.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general"
        />

    <header
        android:fragment="com.andb.apps.todo.SettingsActivity$ThemePreferenceFragment"
        android:icon="@drawable/ic_palette_black_24dp"
        android:title="@string/pref_header_theme" />

    <header
        android:fragment="com.andb.apps.todo.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notif" />

    <header
        android:fragment="com.andb.apps.todo.SettingsActivity$FolderPreferenceFragment"
        android:icon="@drawable/ic_folder_black_24dp"
        android:title="@string/pref_header_folder" />


</preference-headers>
