<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/locationPickerFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.gms.maps.MapView
            android:id="@+id/locationPickerMapView"
            android:layout_width="0dp"
            android:layout_height="480dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:descendantFocusability="blocksDescendants"
            app:layout_constraintBottom_toBottomOf="@+id/locationPickerMapView"
            app:layout_constraintEnd_toEndOf="@+id/locationPickerMapView"
            app:layout_constraintStart_toStartOf="@+id/locationPickerMapView"
            app:layout_constraintTop_toTopOf="@+id/locationPickerMapView">

            <com.github.pengrad.mapscaleview.MapScaleView
                android:id="@+id/locationPickerMapScale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:scale_color="#111"
                app:scale_miles="false" />

        </FrameLayout>

        <ImageView
            android:id="@+id/locationPickerMapMarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/locationPickerMapView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/locationPickerMapView"
            app:srcCompat="@drawable/ic_location_black_24dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/locationPickerAddressCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toTopOf="@+id/locationPickerTabLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/locationPickerAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="5432 Main St., Tampa, FL" />
            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/locationPickerTabLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/AppThemeTabLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationPickerMapView"
            app:tabIndicatorColor="?colorAccent"
            app:tabSelectedTextColor="@color/tabSelectedTextColor"
            app:tabTextColor="@color/tabUnselectedTextColor">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/locationPickerTypeEnter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_type_enter" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/locationPickerTypeExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_type_exit" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/locationPickerTypeNear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_type_near" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/locationRadiusPickerFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/locationPickerTabLayout">

            <SeekBar
                android:id="@+id/locationRadiusPicker"
                style="@android:style/Widget.Material.Light.SeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:max="385"
                android:progress="15"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/locationRadiusPickerStatus"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationRadiusPickerTitle" />

            <TextView
                android:id="@+id/locationRadiusPickerStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/locationRadiusPicker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/locationRadiusPicker"
                tools:text="5" />

            <TextView
                android:id="@+id/locationRadiusPickerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/location_picker_radius"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/locationPickerConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:text="@android:string/yes"
            android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Button"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationRadiusPickerFrame" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>